zmiany w pliku index.html zadania-1

--- a/zadania-domowe/zadanie-1/index.html
+++ b/zadania-domowe/zadanie-1/index.html
@@ -5,6 +5,7 @@
     <title>Moja strona Git Hub Pages</title>
 </head>
 <body>
-    <h1>zadania domowe</h1>
+    <h1>zadania domowe-1</h1>
+    <p>paragraf uli</p>
     </body>
 </html>
