dodano paragraf na gałęzi newbranch

--- a/zadania-domowe/zadanie-1/index.html
+++ b/zadania-domowe/zadanie-1/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>zadania domowe-1</h1>
     <p>paragraf uli</p>
+    <p>Paragraf stworzony na gałęzi newbranch</p>
     </body>
 </html>
