--- a/warsztaty/formularz html/index.html
+++ b/warsztaty/formularz html/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
+
 <body>
-<!--    Podstawowa struktura strony-->
-<header>
-    Header
-</header>
-<nav>
-    <ul>
-        <li><a href="https://akademia108.pl">menu 1</a></li>
-        <li><a href="https://akademia108.pl">menu 2</a></li>
-        <li><a href="https://akademia108.pl">menu 3</a></li>
-    </ul>
-</nav>
-<section>
-    <article>article 1</article>
-    <article>article 2</article>
-</section>
-<aside>
-    aside
-</aside>
-<footer>
-    footer
-</footer>
+    <form action="" method="post">
+        <label for="imie">imię:</label><br/>
+        <input type="text" name="imie" id="imie"><br/>
+        <label for="nazwisko">nazwisko:</label><br/>
+        <input type="text" name=nazwisko id="nazwisko"><br/>
+
+        <label for="email">email:</label><br/>
+        <input type="email" name="email"><br/>
+        <label for="usrtel">numer telefonu:</label><br/>
+        <input type="tel" name="usrtel"><br/>
+
+        <textarea rows="4" cols="50">
+tu wpisz swoją wiadomość
+</textarea><br/ >
+        <input type="submit" value="Wyślij">
+    </form>
+
+
 </body>
+
 </html>
