--- a/warsztaty/formularz html/index.html
+++ b/warsztaty/formularz html/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form action="" method="post">
+    <form action="https://formspree.io/mar.siwinska@gmail.com" method="post">
         <label for="imie">imię:</label><br/>
         <input type="text" name="imie" id="imie"><br/>
         <label for="nazwisko">nazwisko:</label><br/>
