poprawienie literówki w tel

--- a/warsztaty/formularz html/index.html
+++ b/warsztaty/formularz html/index.html
@@ -15,8 +15,8 @@
 
         <label for="email">email:</label><br/>
         <input type="email" name="email"><br/>
-        <label for="usrtel">numer telefonu:</label><br/>
-        <input type="tel" name="usrtel"><br/>
+        <label for="tel">numer telefonu:</label><br/>
+        <input type="tel" name="tel"><br/>
 
         <textarea rows="4" cols="50">
 tu wpisz swoją wiadomość
