zmiany w formularzu w pozycji wiadomosc

--- a/warsztaty/formularz html/index.html
+++ b/warsztaty/formularz html/index.html
@@ -18,9 +18,9 @@
         <label for="tel">numer telefonu:</label><br/>
         <input type="tel" name="tel"><br/>
 
-        <textarea rows="4" cols="50">
-tu wpisz swoją wiadomość
-</textarea><br/ >
+        <tekstarea>
+            
+        </tekstarea>
         <input type="submit" value="Wyślij">
     </form>
 
