--- a/warsztaty/stylowanie-strony/projekt-do-poprawy/index.html
+++ b/warsztaty/stylowanie-strony/projekt-do-poprawy/index.html
@@ -38,8 +38,8 @@
         <h2 id="contact-header">Kontakt</h2>
         <address id="contact-content">
             Łukasz Badocha<br /> ul. Mostowa 6/13<br /> 31-061 Kraków
-        </address><br />
-        <p>
+        </address>
+        <p id="mail">
             <a href="mailto:l.badocha@arena108.pl">l.badocha@arena108.pl</a>
         </p>
     </footer>
