--- a/naglowek-zadanie-domowe/index.html
+++ b/naglowek-zadanie-domowe/index.html
@@ -10,11 +10,9 @@
 </head>
 <body>
     <header id="main-header">
-        <div id="background-foto1"></div>
-        <div id="background-foto2"></div>
-        <div id="about-me">
-            <h2 class="float">I WANT TO BE </h2>
-            <h1 class="float">FRONT-END DEVELOPER</h1>
+        <div id="background-foto">
+            <h2 class="text h2">I WANT TO BE </h2>
+            <h1 class="text h1">FRONT-END DEVELOPER</h1>
         </div>
     </header>
 </body>
