--- a/Or-Bi Mechanik/index.html
+++ b/Or-Bi Mechanik/index.html
@@ -182,7 +182,7 @@
                 </div>
                 
                 <div class="col-md-6 contact-form-column">
-                    <textarea placeholder="wiadomość"></textarea>
+                    <textarea name="wiadomosc" id="wiadomosc" placeholder="wiadomość"></textarea>
                 </div>
                     <div class="col-12 text-center"><input type="submit" value="Wyślij wiadomość"></div>
             </form>
