--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="czcionki fontello/css/fontello.css">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+        <!-- Animate -->
+        <link rel="stylesheet" href="css/animate.css">
         <!-- Main style -->
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -54,9 +56,8 @@
                         <a class="nav-link" href="#">Wydarzenia<i class="icon-calendar"></i></a>
                     </li>
                     <li class="nav-item nav-link-style">
-                        <a class="nav-link" href="#">Szukaj
+                        <a class="nav-link" href="#" id="magicSearch">Szukaj
                             <i class="icon-search"></i>
-                            <input type="text" name="search" class="search-input">
                         </a>
                     </li>
                 </ul>
@@ -76,6 +77,7 @@
         <nav class="nav2">
             <div class="container nav2-container-style">
                 <div class="row nav2-row-style">
+                    <input type="text" name="search" class="search-input d-none" style="border: none;">
                     <div class="col-lg-2 col-sm-6 border-style">
                         <a href="#">NeuroN Foundation</a>
                     </div>
@@ -203,6 +205,7 @@
         <!-- jqery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js/magicArrow.jquery.js"></script>
+        <script src="js/magicSearch.jquery.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
