--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
         <!-- Main style -->
         <link rel="stylesheet" href="css/style.css">
+
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark main-nav1">
@@ -38,11 +39,11 @@
                 </li>
             </ul>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse nav-center-block" id="collapsibleNavbar">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav ml-auto w-80 justify-content-center">
                     <li class="nav-item nav-link-style">
                         <a class="nav-link margin-top-style" href="#">Sklep<i class="icon-basket"></i></a>
@@ -50,72 +51,77 @@
                     <li class="nav-item nav-link-style">
                         <a class="nav-link margin-top-style" href="#">Pobierz<i class="icon-download"></i></a>
                     </li>
-                    <li class="nav-item logo-main-nav-container">
-                        
-                            <a class="nav-link" href="#"><img src="img/logo-biale.png" id="logo-main-nav"></i></a>
-                        </li>
-
+                    <li class="nav-item logo-main-nav-container">                
+                        <a class="nav-link" href="#"><img src="img/logo-biale.png" id="logo-main-nav"></a>
+                    </li>
                     <li class="nav-item nav-link-style">
                         <a class="nav-link margin-top-style" href="#">Wydarzenia<i class="icon-calendar"></i></a>
                     </li>
                     <li class="nav-item nav-link-style">
-                        <a class="nav-link margin-top-style" href="#">Szukaj
-                            <i class="icon-search"></i>
-                            <!-- <input type="text" name="search" class="search-input"> -->
-                        </a>
+                        <a class="nav-link margin-top-style" href="#">Szukaj<i class="icon-search"></i></a>
                     </li>
                 </ul>
+                <div class="dropdown btn"> DROPDOWN
+                        <!-- Link or button to toggle dropdown -->
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                          <li><a tabindex="-1" href="#">Action</a></li>
+                          <li><a tabindex="-1" href="#">Another action</a></li>
+                          <li><a tabindex="-1" href="#">Something else here</a></li>
+                          <li class="divider"></li>
+                          <li><a tabindex="-1" href="#">Separated link</a></li>
+                        </ul>
+                </div>
                 <ul class="navbar-nav ml-auto justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link" href="#">O projekcie</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#">Kontakt</a>
-                        </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">PL</a>
+                        <a class="nav-link" href="#">Kontakt</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Zaloguj</a>
+                            <a class="nav-link" href="#">Zaloguj</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">PL</a>
                     </li>
                 </ul>
             </div>
         </nav>
-                <nav class="navbar navbar-expand-sm navbar-dark justify-content-center" id="nav2">                 
-                        <ul class="navbar-nav text-center">
-                          <li class="nav-item border-style">
-                            <a class="nav-link" href="#">NeuroN Foundation</a>
-                          </li>
-                          <li class="nav-item">
-                                <a class="nav-link" href="#">New Neuropsychiatry</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">NeuroN Direction</a>
-                              </li>    
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Oakes Innovate</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">NTV Channel</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Oakes Clinic</a>
-                              </li>  
-                              <li class="nav-item">
-                                    <a class="nav-link" href="#">Oak Atlantis</a>
-                                  </li>  
-                              <li class="nav-item">
-                                    <a class="nav-link" href="#">O nas</a>
-                            </li>  
-                            </ul>
-                        </nav>
+        <nav class="navbar navbar-expand-sm navbar-dark justify-content-center" id="nav2">                 
+            <ul class="navbar-nav text-center">
+                <li class="nav-item border-style">
+                    <a class="nav-link" href="#">NeuroN Foundation</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">New Neuropsychiatry</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">NeuroN Direction</a>
+                </li>    
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Oakes Innovate</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">NTV Channel</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Oakes Clinic</a>
+                </li>  
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Oak Atlantis</a>
+                </li>  
+                <li class="nav-item">
+                    <a class="nav-link" href="#">O nas</a>
+                </li>  
+            </ul>
+        </nav>
 
 
         <header id="main-header">
             <div class="header-caption">
                 <img src="img/logo-biale.png">
                 <div class="header-text-container">
-                    <h1>NeuroN Foudation</h1>
+                    <h1>NeuroN Foundation</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi optio praesentium magnam ipsum reprehenderit corporis architecto in atque, cupiditate asperiores error nesciunt.</p>
                 </div>
             </div>
