--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -60,17 +60,9 @@
                     <li class="nav-item nav-link-style">
                         <a class="nav-link margin-top-style" href="#">Szukaj<i class="icon-search"></i></a>
                     </li>
-                </ul>
-                <div class="dropdown btn"> DROPDOWN
-                        <!-- Link or button to toggle dropdown -->
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                          <li><a tabindex="-1" href="#">Action</a></li>
-                          <li><a tabindex="-1" href="#">Another action</a></li>
-                          <li><a tabindex="-1" href="#">Something else here</a></li>
-                          <li class="divider"></li>
-                          <li><a tabindex="-1" href="#">Separated link</a></li>
-                        </ul>
-                </div>
+    
+
+            </ul>
                 <ul class="navbar-nav ml-auto justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link" href="#">O projekcie</a>
@@ -81,8 +73,13 @@
                     <li class="nav-item">
                             <a class="nav-link" href="#">Zaloguj</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">PL</a>
+                    <li class="dropdown"> 
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="">PL<span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                  <li><a href="#">EN</a></li>
+                                  <li><a href="#">ZH</a></li>
+                                  <li><a href="#">FR</a></li>
+                                </ul>
                     </li>
                 </ul>
             </div>
