stylowanie dropdown menu

--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark main-nav1">
-            <ul class="navbar-nav to-hide">
+            <ul class="navbar-nav">
                 <li>
                     <a class="nav-link" href="#"><i class="icon-rss"></i></a>
                 </li>
@@ -74,11 +74,11 @@
                             <a class="nav-link" href="#">Zaloguj</a>
                     </li>
                     <li class="dropdown"> 
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="">PL<span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                  <li><a href="#">EN</a></li>
-                                  <li><a href="#">ZH</a></li>
-                                  <li><a href="#">FR</a></li>
+                            <a class="nav-link" data-toggle="dropdown" href="">PL<span class="caret"></span></a>
+                                <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="languageSubmenu">
+                                  <li><a class="nav-link" href="#">EN</a></li>
+                                  <li><a class="nav-link" href="#">ZH</a></li>
+                                  <li><a class="nav-link" href="#">FR</a></li>
                                 </ul>
                     </li>
                 </ul>
