--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -17,8 +17,8 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark main-nav1">
-            <ul class="navbar-nav">
+    <nav class="navbar navbar-expand-lg navbar-dark main-nav1">
+            <ul class="nav navbar-nav to-hide">
                 <li>
                     <a class="nav-link" href="#"><i class="icon-rss"></i></a>
                 </li>
@@ -44,14 +44,14 @@
         </button>
 
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav ml-auto w-80 justify-content-center">
+                <ul class="nav navbar-nav ml-auto w-80 justify-content-center">
                     <li class="nav-item nav-link-style">
                         <a class="nav-link margin-top-style" href="#">Sklep<i class="icon-basket"></i></a>
                     </li>
                     <li class="nav-item nav-link-style">
                         <a class="nav-link margin-top-style" href="#">Pobierz<i class="icon-download"></i></a>
                     </li>
-                    <li class="nav-item logo-main-nav-container">                
+                    <li class="nav-item logo-main-nav-container to-hide">                
                         <a class="nav-link" href="#"><img src="img/logo-biale.png" id="logo-main-nav"></a>
                     </li>
                     <li class="nav-item nav-link-style">
@@ -63,7 +63,7 @@
     
 
             </ul>
-                <ul class="navbar-nav ml-auto justify-content-end">
+                <ul class="nav navbar-nav ml-auto justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link" href="#">O projekcie</a>
                     </li>
@@ -111,7 +111,7 @@
                     <a class="nav-link" href="#">O nas</a>
                 </li>  
             </ul>
-        </nav>
+        </nav> 
 
 
         <header id="main-header">
@@ -209,12 +209,10 @@
             </div>
         </div>
 
+        <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-        <!-- jqery -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js/magicArrow.jquery.js"></script>
         <script src="main.js"></script>
     </body>
