stylownie rwd nav1

--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -17,7 +17,7 @@
 
     </head>
     <body>
-    <nav class="navbar navbar-expand-lg navbar-dark main-nav1">
+    <nav class="navbar navbar-expand-lg justify-content-center navbar-dark main-nav1">
             <ul class="nav navbar-nav to-hide">
                 <li>
                     <a class="nav-link" href="#"><i class="icon-rss"></i></a>
@@ -46,19 +46,19 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="nav navbar-nav ml-auto w-80 justify-content-center">
                     <li class="nav-item nav-link-style">
-                        <a class="nav-link margin-top-style" href="#">Sklep<i class="icon-basket"></i></a>
+                        <a class="nav-link margin-top-style" href="#">Sklep<i class="icon-basket to-hide"></i></a>
                     </li>
                     <li class="nav-item nav-link-style">
-                        <a class="nav-link margin-top-style" href="#">Pobierz<i class="icon-download"></i></a>
+                        <a class="nav-link margin-top-style" href="#">Pobierz<i class="icon-download to-hide"></i></a>
                     </li>
                     <li class="nav-item logo-main-nav-container to-hide">                
                         <a class="nav-link" href="#"><img src="img/logo-biale.png" id="logo-main-nav"></a>
                     </li>
                     <li class="nav-item nav-link-style">
-                        <a class="nav-link margin-top-style" href="#">Wydarzenia<i class="icon-calendar"></i></a>
+                        <a class="nav-link margin-top-style" href="#">Wydarzenia<i class="icon-calendar to-hide"></i></a>
                     </li>
                     <li class="nav-item nav-link-style">
-                        <a class="nav-link margin-top-style" href="#">Szukaj<i class="icon-search"></i></a>
+                        <a class="nav-link margin-top-style" href="#">Szukaj<i class="icon-search to-hide"></i></a>
                     </li>
     
 
@@ -73,9 +73,9 @@
                     <li class="nav-item">
                             <a class="nav-link" href="#">Zaloguj</a>
                     </li>
-                    <li class="dropdown"> 
+                    <li class="nav-item dropdown"> 
                             <a class="nav-link" data-toggle="dropdown" href="">PL<span class="caret"></span></a>
-                                <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="languageSubmenu">
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="languageSubmenu">
                                   <li><a class="nav-link" href="#">EN</a></li>
                                   <li><a class="nav-link" href="#">ZH</a></li>
                                   <li><a class="nav-link" href="#">FR</a></li>
