--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -157,7 +157,7 @@
                 <div class="row section-row-style">
                     <div class="col-lg-8 col-md-12 col-sm-12 article-text d-md-block">
                         <h4>New Neuropsychiatry</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore repellat eveniet placeat animi, ipsam amet mollitia? Eum dicta voluptate a, repudiandae eligendi quod quibusdam blanditiis fugit omnis placeat. Commodi dolore, voluptatem neque, quia, aspernatur incidunt earum laborum laudantium alias esse velit ipsum sed quidem perspiciatis est molestias cupiditate ipsa optio! In sequi, libero cum laudantium velit veniam quia aut, voluptatem totam vitae vel optio minus nisi excepturi, eius iure provident quibusdam deserunt modi. Illo facere laboriosam est earum similique minus!</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore repellat eveniet placeat animi, ipsam amet mollitia? Eum dicta voluptate a, repudiandae eligendi quod quibusdam blanditiis fugit omnis placeat. Commodi dolore, voluptatem neque, quia, aspernatur incidunt earum laborum laudantium alias esse velit ipsum sed quidem perspiciatis est molestias cupiditate ipsa optio! In sequi, libero cum laudantium velit veniam quia aut, voluptatem totam vitae vel optio minus nisi excepturi, eius iure provident quibusdam deserunt modi. Illo facere laboriosam est earum similique minus</p>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-container">
                         <img src="img/article2.jpg" class="section-img-style section-img-right animate-right">
