--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -174,7 +174,7 @@
                 </div>
             </div>
         </section>
-
+<!-- footer -->
         <footer>
             <div class="text-center footer">
                 <nav class="navbar navbar-expand-sm navbar-light justify-content-center">
