--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -174,7 +174,7 @@
                 </div>
             </div>
         </section>
-<!-- footer -->
+<!-- footer- -->
         <footer>
             <div class="text-center footer">
                 <nav class="navbar navbar-expand-sm navbar-light justify-content-center">
