--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -259,6 +259,7 @@
         <script src="js/magicArrow.jquery.js"></script>
         <script src="js/magicSearch.jquery.js"></script>
         <script src="js/magicNav.jquery.js"></script>
+        <script src="js/magicLine.jquery.js"></script>
         <script src="main.js"></script>
 
         <script>
