placeholder/kursor w inpucie, usunęcie poziomego scrolla

--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -98,7 +98,7 @@
                         </ul>
                     </li>
                     <li class="nav-item" style="position:absolute; right: 10px; top: 10px; z-index: 10000;">
-                        <input type="text" name="search" class="search-input d-none" style="border: none;">
+                        <input type="text" name="search" autofocus class="search-input d-none" placeholder="Szukaj w Oakes Innovate" style="border: none";>
                     </li>
                 </ul>
             </div>
