--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -145,13 +145,13 @@
                 </div>
             </div>
         </section>
-        <!-- 5 okienek -->
+        <!-- 6 okienek -->
         <section>
         <div class="container-fluid" >
             <div class="card-deck" style="margin-left: 20px; margin-right:20px ">
                 <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
                     <div id ="duze1" class="card-body">
-                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img src="img/projekt1.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
+                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img id="obrazki"src="img/projekt1.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
                         <h6 class="card-title" style="text-align:center">Nazwa aktualności 1</h6></small>
                         <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
                     </div>
@@ -179,12 +179,21 @@
                     </div>
                 </div>
                 <div class="w-100 d-none d-sm-block d-md-none"><!-- wrap every 2 on sm--></div>
-                <div class="w-100 d-none d-lg-block d-xl-none"><!-- wrap every 4 on lg--></div>
+                
                <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
                     <div id ="duze5" class="card-body">
                         <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img src="img/projekt5.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
                         <h6 class="card-title" style="text-align:center">Nazwa aktualności 5</h6></small>
                         <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
+                    </div>
+                </div>
+				<div class="w-100 d-none d-sm-block d-md-none"><!-- wrap every 2 on sm--></div>
+                
+               <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
+                    <div id ="duze5" class="card-body">
+                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img src="img/projekt6.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
+                        <h6 class="card-title" style="text-align:center">Nazwa aktualności 6</h6></small>
+                        <p class="p-2" style="text-align: justify;">This is a longer cardnatural lead-in to additional content. This content is a little bit</p>
                     </div>
                 </div>
             </div>
