--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -145,7 +145,7 @@
                 </div>
             </div>
         </section>
-        <!-- 6 okienek -->
+        <!-- 6- okienek -->
         <section>
         <div class="container-fluid" >
             <div class="card-deck" style="margin-left: 20px; margin-right:20px ">
