--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -284,10 +284,7 @@
                 <i class="icon-down-open" id="scroll-down"></i>
             </div>
         </div>
-		<script type="text/javascript" src="scripts/custom.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-
+		
         <script src="vendor/mustache.js-3.0.1/mustache.js"></script>
 
         <script id="search-results-template" type="x-tmpl-mustache">
@@ -313,6 +310,7 @@
         <script src="vendor/jquery-3.3.1/jquery-3.3.1.js"></script>
         <script src="vendor/popper.js-1.14.6/umd/popper.js"></script>
         <script src="vendor/bootstrap-4.2.1/js/bootstrap.bundle.js"></script>
+        <script src="scripts/custom.js"></script>
         <script src="js/magicArrow.jquery.js"></script>
         <script src="js/magicSearch.jquery.js"></script>
         <script src="js/magicNav.jquery.js"></script>
