dodanie ikony zamykania inputa

--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -65,9 +65,9 @@
                     <li class="nav-item nav-link-style">
                         <a class="nav-link margin-top-style" href="#">Wydarzenia<i class="icon-calendar to-hide"></i></a>
                     </li>
-                    <li class="nav-item nav-link-style">
+                    <li class="nav-item nav-link-style hide-when-search">
                         <a class="nav-link margin-top-style" href="#" id="magicSearch">Szukaj
-                            <i class="icon-search"></i>
+                            <i class="icon-search to-hide"></i>
                         </a>
                     </li>
     
@@ -97,8 +97,11 @@
                             <li><a class="nav-link" href="#">JA</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item" style="position:absolute; right: 10px; top: 10px; z-index: 10000;">
+                    <li class="nav-item" style="position:absolute; width: 550px; right: 40px; top: 10px; z-index: 10000;">
                         <input type="text" name="search" autofocus class="search-input d-none" placeholder="Szukaj w Smart Oak Project" style="border: none";>
+                    </li>
+                    <li class="nav-item margin-top-style input-close-icon">
+                        <i class="icon-cancel"></i>
                     </li>
                 </ul>
             </div>
