--- a/NeuronS - GitHub/czcionki fontello/demo.html
+++ b/NeuronS - GitHub/czcionki fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?40162939');
-      src: url('./font/fontello.eot?40162939#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?40162939') format('woff'),
-           url('./font/fontello.ttf?40162939') format('truetype'),
-           url('./font/fontello.svg?40162939#fontello') format('svg');
+      src: url('./font/fontello.eot?81723921');
+      src: url('./font/fontello.eot?81723921#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?81723921') format('woff'),
+           url('./font/fontello.ttf?81723921') format('truetype'),
+           url('./font/fontello.svg?81723921#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -305,14 +305,17 @@ body {
       </div>
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-down-open">&#xe804;</i> <span class="i-name">icon-down-open</span><span class="i-code">0xe804</span></div>
+        <div class="the-icons span3" title="Code: 0xe805"><i class="demo-icon icon-cancel">&#xe805;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe805</span></div>
         <div class="the-icons span3" title="Code: 0xf02e"><i class="demo-icon icon-download">&#xf02e;</i> <span class="i-name">icon-download</span><span class="i-code">0xf02e</span></div>
         <div class="the-icons span3" title="Code: 0xf099"><i class="demo-icon icon-twitter">&#xf099;</i> <span class="i-name">icon-twitter</span><span class="i-code">0xf099</span></div>
-        <div class="the-icons span3" title="Code: 0xf09a"><i class="demo-icon icon-facebook">&#xf09a;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xf09a</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf09a"><i class="demo-icon icon-facebook">&#xf09a;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xf09a</span></div>
         <div class="the-icons span3" title="Code: 0xf09e"><i class="demo-icon icon-rss">&#xf09e;</i> <span class="i-name">icon-rss</span><span class="i-code">0xf09e</span></div>
         <div class="the-icons span3" title="Code: 0xf16a"><i class="demo-icon icon-youtube-play">&#xf16a;</i> <span class="i-name">icon-youtube-play</span><span class="i-code">0xf16a</span></div>
         <div class="the-icons span3" title="Code: 0xf16d"><i class="demo-icon icon-instagram">&#xf16d;</i> <span class="i-name">icon-instagram</span><span class="i-code">0xf16d</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf30c"><i class="demo-icon icon-linkedin-squared">&#xf30c;</i> <span class="i-name">icon-linkedin-squared</span><span class="i-code">0xf30c</span></div>
       </div>
     </div>
