--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -107,7 +107,7 @@
             </div>
         </nav>
 
-        <nav class="navbar navbar-expand-sm navbar-dark justify-content-center fixed-top" id="nav2">
+        <nav class="navbar navbar-expand-sm navbar-dark justify-content-center sticky-top" id="nav2">
             <ul class="navbar-nav text-center">
                 <li class="nav-item border-style">
                     <a class="nav-link nav2-link-style" href="#">NeuroN Foundation</a>
