--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -23,7 +23,7 @@
 
     </head>
     <body>
-        <div id="search-results-container" class="animated"></div>
+        <!-- <div id="search-results-container" class="animated"></div> -->
     <nav class="navbar navbar-expand-lg justify-content-center navbar-dark main-nav1">
             <ul class="nav navbar-nav to-hide">
                 <li>
@@ -70,9 +70,7 @@
                             <i class="icon-search to-hide"></i>
                         </a>
                     </li>
-    
-
-            </ul>
+                </ul>
                 <ul class="nav navbar-nav ml-auto justify-content-end" id="right-itemlist">
                     <li class="nav-item hide-when-search">
                         <a class="nav-link" href="#">O projekcie</a>
