--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -148,59 +148,67 @@
         </section>
         <!-- 6 okienek -->
         <section>
-        <div class="container-fluid" >
-            <div class="card-deck" style="margin-left: 20px; margin-right:20px ">
-                <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
-                    <div id ="duze1" class="card-body">
-                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img id="obrazki"src="img/projekt1.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
-                        <h6 class="card-title" style="text-align:center">Nazwa aktualności 1</h6></small>
-                        <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="card-deck">
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                            <div class="card mb-4">
+                                <div id="duze1" class="card-body">
+                                    <div class="powiekszenie"><img id="obrazki" src="img/projekt1.jpg" class="img-fluid"></div>
+                                    <h6 class="card-title" style="text-align:center">Nazwa aktualności 1</h6></small>
+                                    <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                            <div class="card mb-4">
+                                <div id="duze1" class="card-body">
+                                    <div class="powiekszenie"><img id="obrazki" src="img/projekt2.jpg" class="img-fluid"></div>
+                                    <h6 class="card-title" style="text-align:center">Nazwa aktualności 2</h6></small>
+                                    <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                            <div class="card mb-4">
+                                <div id="duze1" class="card-body">
+                                    <div class="powiekszenie"><img id="obrazki" src="img/projekt3.jpg" class="img-fluid"></div>
+                                    <h6 class="card-title" style="text-align:center">Nazwa aktualności 3</h6></small>
+                                    <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                            <div class="card mb-4">
+                                <div id="duze1" class="card-body">
+                                    <div class="powiekszenie"><img id="obrazki" src="img/projekt4.jpg" class="img-fluid"></div>
+                                    <h6 class="card-title" style="text-align:center">Nazwa aktualności 4</h6></small>
+                                    <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                            <div class="card mb-4">
+                                <div id="duze1" class="card-body">
+                                    <div class="powiekszenie"><img id="obrazki" src="img/projekt5.jpg" class="img-fluid"></div>
+                                    <h6 class="card-title" style="text-align:center">Nazwa aktualności 5</h6></small>
+                                    <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                            <div class="card mb-4">
+                                <div id="duze1" class="card-body">
+                                    <div class="powiekszenie"><img id="obrazki" src="img/projekt6.jpg" class="img-fluid"></div>
+                                    <h6 class="card-title" style="text-align:center">Nazwa aktualności 6</h6></small>
+                                    <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
+                                </div>
+                            </div>
+                         </div>
                     </div>
-                </div>	
-                <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
-                    <div id ="duze2" class="card-body">
-                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img src="img/projekt2.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
-                        <h6 class="card-title" style="text-align:center">Nazwa aktualności 2</h6></small>
-                        <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
-                    </div>
-                </div>
-                <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
-                    <div id ="duze3" class="card-body">
-                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img src="img/projekt3.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
-                        <h6 class="card-title" style="text-align:center">Nazwa aktualności 3</h6></small>
-                        <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
-                    </div>
-                </div>
-                <div class="w-100 d-none d-md-block p-3 d-lg-none p-3"><!-- wrap every 3 on md--></div>
-                <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
-                    <div id ="duze4" class="card-body">
-                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img src="img/projekt4.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
-                        <h6 class="card-title" style="text-align:center">Nazwa aktualności 4</h6></small>
-                        <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
-                    </div>
-                </div>
-                <div class="w-100 d-none d-sm-block d-md-none"><!-- wrap every 2 on sm--></div>
-                
-               <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
-                    <div id ="duze5" class="card-body">
-                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img src="img/projekt5.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
-                        <h6 class="card-title" style="text-align:center">Nazwa aktualności 5</h6></small>
-                        <p class="p-2" style="text-align: justify;">This is a longer card with supporting text bThis is a longeas a natuelow as a natural lead-in to additional content. This content is a little bit</p>
-                    </div>
-                </div>
-				<div class="w-100 d-none d-sm-block d-md-none"><!-- wrap every 2 on sm--></div>
-                
-               <div class="card mb-4" style="border-radius:25px;box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);">
-                    <div id ="duze5" class="card-body">
-                        <div class="powiekszenie" style="border:0px none; border-radius: 25px 25px 0px 0px;"><img src="img/projekt6.jpg" class="img-fluid" style="border-radius: 25px 25px 0px 0px; margin-bottom: 0.5rem"></div>
-                        <h6 class="card-title" style="text-align:center">Nazwa aktualności 6</h6></small>
-                        <p class="p-2" style="text-align: justify;">This is a longer cardnatural lead-in to additional content. This content is a little bit</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+                  </div>
+              </div>
         </section>
-
         <footer>
             <div class="text-center footer">
                 <nav class="navbar navbar-expand-sm navbar-light justify-content-center">
@@ -253,7 +261,7 @@
                 <i class="icon-down-open" id="scroll-down"></i>
             </div>
         </div>
-		<script type="text/javascript" src="scripts/custom.js"></script>
+        <script type="text/javascript" src="scripts/custom.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 
