--- a/NeuronS - GitHub/index.html
+++ b/NeuronS - GitHub/index.html
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </section>
-        <!-- 6 okienek -->
+        <!-- 6 okienek- -->
         <section>
             <div class="container-fluid">
                 <div class="row">
